# gcc1734

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_doc.txt
labs/: aprendizado_por_reforco_tabular.md
notas_aula/: AM.tex
notebooks/: GridWorld_Qlearning_Lab.ipynb  ar_fator_desconto.ipynb
src/adversarial/: commands.txt  helper_functions.py
src/agentes-baseados-llm/: README.md  requirements-guardrails-langgraph.txt
src/am/: 01_am_secoes_1_3_companion.ipynb  02_am_secao_4_vies_variancia_regularizacao.ipynb  03_am_secao_5_arvores_titanic.ipynb  04_am_secao_6_metodos_ensemble.ipynb  05_am_secao_7_redes_neurais_artificiais.ipynb  06_am_secao_8_aprendizado_nao_supervisionado.ipynb
src/exemplos_ar/: 02_mundo_grade_pdm.py  03_bellman_manual.py  06_qlearning_tabular.py  07_propagacao_valor.py  08_sarsa_vs_qlearning.py  09_estrategias_exploracao.py  10_regret_acumulado.py  12_qlearning_linear.py  notebook_AR.ipynb
src/genai/: 01_agentes_llm_langchain.ipynb  01_agentes_llm_langchain_langgraph.ipynb  02_rag_pipeline.ipynb  get_llm.py  requirements.txt
src/ml/: Classification_beer.ipynb  Classification_students.ipynb  Regression_beer.ipynb  sgdclassifier_example.py
src/rl/: README-lql.md  README-qll.md  README-qln.md  README-qlt.md  README-tql.md  lql.py  lql_play.py  lql_train.py  play_qlearning.py  ql_play.py  ql_train.py  qll.py  qll_blackjack_feature_extractor.py  qll_play.py  qll_taxi_feature_extractor.py  qll_taxi_feature_extractor_DEPRECATED.py  qll_train.py  qln.py  qlt.py  qlt_play.py  qlt_train.py  tql.py  tql_play.py  tql_train.py  (+1 more)
(+35 files in other folders)
